<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView android:id="@+id/video"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/filter_video"
        android:padding="12dp"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/podcast"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/filter_podcast"
        android:padding="12dp"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/tv"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/filter_tv"
        android:padding="12dp"
        android:textSize="22sp"
        android:textStyle="bold"/>
    <TextView android:id="@+id/radio"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/filter_radio"
        android:padding="12dp"
        android:textSize="22sp"
        android:textStyle="bold"/>
</LinearLayout>
