<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <fragment android:id="@+id/fragment_station_list"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:name="com.google.sample.cast.refplayer.ui.channellist.view.ChannelListFragment" />
    </android.support.v7.widget.LinearLayoutCompat>
    <LinearLayout
        android:id="@+id/drawer"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="304dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:fitsSystemWindows="true">
        <FrameLayout
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginBottom="8dp">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/drawer_bg"
                android:scaleType="centerCrop"/>
            <android.support.v7.widget.AppCompatImageView
                android:textSize="36sp"
                android:src="@drawable/jarrion_white"
                android:layout_gravity="bottom"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="24dp"
                android:layout_width="148dp"
                android:adjustViewBounds="true"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <LinearLayout
            android:id="@+id/drawer_item_channels"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/drawer_item_channels_name"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/drawer_item_channels_value"
                android:textSize="20dp"
                android:textColor="@color/drawer_item_value"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/drawer_item_queue"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/drawer_item_queue_name"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/drawer_item_queue_value"
                android:textSize="20dp"
                android:textColor="@color/drawer_item_value"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/drawer_item_notifications"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/drawer_item_notifications_name"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <Switch
                android:id="@+id/drawer_item_notifications_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/drawer_item_about"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <android.support.v7.widget.AppCompatTextView
                android:text="@string/drawer_item_about_name"
                android:textSize="18sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>

