<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/drawer"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="304dp"
    android:layout_height="match_parent"
    android:layout_gravity="left|start"
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginBottom="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/drawer_bg"
            android:scaleType="centerCrop"/>
        <android.support.v7.widget.AppCompatImageView
            android:textSize="36sp"
            android:src="@drawable/jarrion_white"
            android:layout_gravity="bottom"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_width="148dp"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content" />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/drawer_item_channels"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:gravity="center_vertical"
        android:padding="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/ic_drawer_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/drawer_item_channels_name"
            android:layout_marginLeft="32dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            tools:text="13"
            android:id="@+id/drawer_item_channels_value"
            android:textSize="20dp"
            android:textColor="@color/drawer_item_value"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/drawer_item_livestream"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:gravity="center_vertical"
        android:padding="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/ic_drawer_channels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/drawer_item_channels_name"
            android:layout_marginLeft="32dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/drawer_item_divider_background"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/drawer_item_queue"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:gravity="center_vertical"
        android:padding="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/ic_drawer_queue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/drawer_item_queue_name"
            android:layout_marginLeft="32dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            tools:text="6"
            android:id="@+id/drawer_item_queue_value"
            android:textSize="20dp"
            android:textColor="@color/drawer_item_value"
            android:layout_marginRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/drawer_item_divider_background"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/drawer_item_notifications"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:gravity="center_vertical"
        android:padding="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/ic_drawer_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/drawer_item_notifications_name"
            android:layout_marginLeft="32dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Switch
            android:id="@+id/drawer_item_notifications_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/drawer_item_divider_background"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_height="1dp"/>
    <LinearLayout
        android:id="@+id/drawer_item_about"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/drawer_item_height"
        android:gravity="center_vertical"
        android:padding="8dp">
        <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/ic_drawer_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:text="@string/drawer_item_about_name"
            android:layout_marginLeft="32dp"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:background="@color/drawer_item_divider_background"
        android:layout_width="match_parent"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="64dp"
        android:layout_height="1dp"/>
</LinearLayout>
